infrastructure/flux-capacitor/overlays/homelab/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: capacitor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - capacitor.local.zachary.day
    secretName: capacitor-ingress-tls
  rules:
  - host: capacitor.local.zachary.day
    http:
      paths:
      - backend:
          service:
            name: capacitor
            port:
              name: http
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
